Fix visual padding bug in mobile dark mode switch

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1046,6 +1046,10 @@ select {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -1168,6 +1172,11 @@ select {
 }
 .h-6 {
   height: 1.5rem;
+}
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .min-h-screen {
   min-height: 100vh;
